--- a/files/etc/logstash/conf.d/logstash.conf
+++ b/files/etc/logstash/conf.d/logstash.conf
@@ -10,7 +10,8 @@ input {
 
 output {
   stdout { }
-  elasticsearch_http {
+  elasticsearch {
+    protocol => "http"
     host => "localhost"
     port => "9200"
   }
