Added Apache Filter to logstash.conf

--- a/files/etc/logstash/conf.d/logstash.conf
+++ b/files/etc/logstash/conf.d/logstash.conf
@@ -8,6 +8,14 @@ input {
   }
 }
 
+filter {
+  if [program] == "apache-access" {
+    grok {
+      match => [ "message", "%{COMBINEDAPACHELOG}" ]
+    }
+  }
+}
+
 output {
   stdout { }
   elasticsearch {
